fixed chart hover problem on mobile relating to zoom

--- a/src/app/markets/markets.less
+++ b/src/app/markets/markets.less
@@ -293,6 +293,10 @@
 
 
 @media (max-width: 480px) {
+  #priceChart, .markets .controls {
+    zoom: 0.75;  //zoom 75% for phones
+  }
+  
   #currencyPair select{
     padding: 5px 40px 5px 5px;
     font-size: 16px;
