--- a/src/less/main.less
+++ b/src/less/main.less
@@ -558,7 +558,7 @@ footer .links a:first-child {
 }
 
 @media (max-width: 480px) {
-  .header, .markets .wrap {
+  .header {
     zoom: 0.75;  //zoom 75% for phones
   }
   
